<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="353dp"
        android:layout_height="166dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/festa_de_simcity"
        android:padding="@dimen/padding_35dp"
        android:src="@drawable/balao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textFontWeight="200"
        android:text="@string/txtApresentacaoSimCity"
        android:padding="@dimen/editPadding_15dp"
        android:layout_marginLeft="@dimen/editPadding_15dp"
        android:layout_marginRight="@dimen/btnPadding_8dp"
        android:textSize="@dimen/txtApresentacaoSize_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHome" />

    <Button
        android:layout_width="387dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btnCNovoProduto_vermelho"
        android:text="@string/btn_irProdutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHome" />

</androidx.constraintlayout.widget.ConstraintLayout>